updated seamonkey packages

--- a/seamonkey/seamonkey.nuspec
+++ b/seamonkey/seamonkey.nuspec
@@ -5,13 +5,13 @@
     <!-- Read this before publishing packages to chocolatey.org: https://github.com/chocolatey/chocolatey/wiki/CreatePackages -->
     <id>seamonkey</id>
     <title>seamonkey (Install)</title>
-    <version>2.49.4</version>
+    <version>2.49.5</version>
     <authors>seamonkey</authors>
     <owners>dp3atksu</owners>
     <summary>Seamonkey all-in-one interent application suite</summary>
     <description>The SeaMonkey project is a community effort to develop the SeaMonkey all-in-one internet application suite.   </description>
     <projectUrl>http://www.seamonkey-project.org/</projectUrl>
-    <packageSourceUrl>https://github.com/dp3/chocolateyPackages</packageSourceUrl>
+    <projectSourceUrl>https://github.com/dp3/chocolateyPackages</projectSourceUrl>
     <tags>seamonkey</tags>
     <licenseUrl>https://www.seamonkey-project.org/legal/#license</licenseUrl>
     <iconUrl>https://addons.cdn.mozilla.net/static/img/app-icons/med/seamonkey.png</iconUrl>
