--- a/xournal++/xournal++.nuspec
+++ b/xournal++/xournal++.nuspec
@@ -15,6 +15,7 @@
     <projectSourceUrl>https://github.com/xournalpp/xournalpp</projectSourceUrl>
     <packageSourceUrl>https://github.com/dp3/chocolateyPackages</packageSourceUrl>
     <tags>xjournalpp</tags>
+	<iconUrl>https://avatars2.githubusercontent.com/u/5192682?s=200&v=4</iconUrl>
     <copyright>https://xournalpp.github.io</copyright>
     <licenseUrl>https://xournalpp.github.io</licenseUrl>
   </metadata>
