--- a/seamonkey/seamonkey.nuspec
+++ b/seamonkey/seamonkey.nuspec
@@ -5,7 +5,7 @@
     <!-- Read this before publishing packages to chocolatey.org: https://github.com/chocolatey/chocolatey/wiki/CreatePackages -->
     <id>seamonkey</id>
     <title>seamonkey (Install)</title>
-    <version>2.53.13</version>
+    <version>2.53.16</version>
     <authors>seamonkey</authors>
     <owners>dp3atksu</owners>
     <summary>Seamonkey all-in-one interent application suite</summary>
@@ -14,7 +14,7 @@
     <packageSourceUrl>https://github.com/dp3/chocolateyPackages</packageSourceUrl>
     <tags>seamonkey firefox thunderbird foss cross-platform browser email news wysiwyg html</tags>
     <licenseUrl>https://www.seamonkey-project.org/legal/#license</licenseUrl>
-    <iconUrl>https://addons.cdn.mozilla.net/static/img/app-icons/med/seamonkey.png</iconUrl>
+    <iconUrl>https://www.seamonkey-project.org/images/seamonkey96.png</iconUrl>
     <releaseNotes>This is a new minor release of Xournal++ with many bugfixes thanks to help from our community contributors. https://www.seamonkey-project.org/releases/#2.53.13 </releaseNotes>
 
 </metadata>
