--- a/xournal++/xournal++.nuspec
+++ b/xournal++/xournal++.nuspec
@@ -5,7 +5,7 @@
     <!-- Read this before publishing packages to chocolatey.org: https://github.com/chocolatey/chocolatey/wiki/CreatePackages -->
     <id>xournalplusplus</id>
     <title>xournal++</title>
-    <version>1.0.20</version>
+    <version>1.1.3</version>
     <authors>xournalpp</authors>
     <owners>dp3atksu</owners>
     <summary>  Xournal++ is a handwriting notetaking software with PDF annotation support. Written in C++ with GTK3, supporting Linux (e.g. Ubuntu, Debian, Arch, SUSE), macOS and Windows 10. Supports pen input from devices such as Wacom Tablets </summary>
@@ -18,8 +18,7 @@
 	<iconUrl>https://raw.githubusercontent.com/dp3/chocolateyPackages/master/xournal%2B%2B/xournal_icon.png</iconUrl>
     <copyright>https://xournalpp.github.io</copyright>
     <licenseUrl>https://github.com/xournalpp/xournalpp/blob/master/LICENSE</licenseUrl>
-    <releaseNotes> Fixed a regression with pdf files that could not be overwritten (#2355), Fixed page layout update after inserting or deleting a page, changing the page layout or zooming (#1777, #2346, #2442), Fixed incorrect rendering of pages after changing the page format (#2457), Fixed blocked scrolling after saving a file (#2062),Fixed presentation mode after startup (#2413), https://github.com/xournalpp/xournalpp/releases/tag/1.0.20
-      </releaseNotes>
+    <releaseNotes> Bugfixes from various community contributors.    https://github.com/xournalpp/xournalpp/blob/master/CHANGELOG.md   </releaseNotes>
    </metadata>
   <files>
     <file src="tools\**" target="tools" />
